fix button login on mobile

--- a/src/components/LoginModal/LoginModal.scss
+++ b/src/components/LoginModal/LoginModal.scss
@@ -69,14 +69,14 @@
     .login-modal {
         .login-btn {
             button {
-                .button-content {
-                    width: 20px;
+                // .button-content {
+                //     // width: 20px;
 
-                    p {
-                        position: absolute;
-                        visibility: hidden !important;
-                    }
-                }
+                //     p {
+                //         // position: absolute;
+                //         // visibility: hidden !important;
+                //     }
+                // }
             }
         }
     }
